--- a/styles/style.css
+++ b/styles/style.css
@@ -243,37 +243,24 @@
   align-self: flex-start;
   color: black;
   font-size: 20px;
-  font-weight: 400;
 }
 .text_container {
   display: block;
   padding-top: 77px;
+  max-width: 693px;
 }
 .text_container:last-child {
   padding-top:3px;
 }
 .footer {
-  display: grid;
+  display: flex;
   grid-template-columns: 1fr 1fr 1fr;
   padding: 184px 50px 88px;
-  align-items: flex-start;
-}
-.footer_address {
-  display: flex;
-  flex-direction: column;
-  justify-self: end;
-  align-items: flex-start;
-  font-size: 18px;
-  line-height: 24.3px;
-  letter-spacing: 0.18px;
-  font-family: "Raleway", sans-serif;
-  list-style-type: none;
-  font-style: normal;
-  width: 240px;
+  justify-content: space-between;
 }
 .footer_menu_links {
   list-style-type: none;
-  text-underline-offset: 3px;
+  text-underline-offset: 5px;
 }
 .footer_links {
   color: black;
@@ -281,17 +268,17 @@
   font-size: 18px;
   font-weight: 400;
   line-height: normal;
-  
 }
 .footer_main {
   text-decoration: none;
 }
 .images_footer {
+  justify-content: end;
   width: 48px;
   height: 48px;
 }
 .footer_images {
   display: flex;
   gap: 48px;
-  justify-self: end;
+  justify-content: end;
 }
